--- a/css/table.css
+++ b/css/table.css
@@ -103,7 +103,7 @@ input#contactemail {
     width:300px;
 }
 .hint {
-    color:#999;
+    color:#03454f;
 }
 table#post-form-table tr td div.hint {
     float:left;
